1999-06-30  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* collections.h (OutputStream), OutputStream.[hm]: Add long long
	output methods.

	* collections.h, Map.[hm]: Add -setCompareCStrings,
	-setCompareIntegers, -setCompareUnsignedIntegers, -setCompareIDs.

	* Map.m (COMPAREFUNCEQ): New macro.  Use it throughout
	for any instance of compareFunc == X.

1999-06-29  Alex Lancaster  <alex@santafe.edu>

	* ListShuffler.m ([ListShuffler_c +create:setUniformRandom:]):
	Call createBegin on `self' rather than `ListShuffler_c', since
	this does not exist for a phase-split class.

1999-06-25  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Set.[hm] ([Set_c -getCount]): New method.

1999-06-22  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Collection.m (indexAtOffset): Adjust loop logic to avoid
	negative numbers.

	* List_GEN.m ([TINDEX -setOffset:]): Likewise.

	* Permutation.[hm] ([PermutationItem_c -setPosition:],
	[PermutationItem_c -getPosition]): Make position unsigned.

	* Collection.m (indexAtOffset): Make offset unsigned.

	* Array.[hm], Collection.[hm] ([Array_c -atOffset:], [Array_c
	-atOffset:put:]): Make offset unsigned.
	([ArrayIndex_c -setOffset:]): Likewise.

	* List_GEN.m ([TINDEX -setOffset:]): Likewise.

	* Set.m ([SetIndex_c -setOffset:]): Likewise.

	* collections.h: Reflect these changes.

1999-06-20  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* List.m (setListClass): Don't use string manipulation to
	get next phase; use nextPhase.

	* Map.m ([Map_c -createIndex:fromMember:]): Use a componentZone for
	listIndex.

1999-06-17  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* List.m (setListClass): Fix off by one error in computing name
	for using-phase-lookup-by-string.  Use buffer on stack instead of heap.

1999-06-10  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.am (BUILT_SOURCES): Use TYPEINFO.
	(module_headers): Remove.

1999-06-08  Alex Lancaster  <alex@santafe.edu>
